[WIP] Fixed banner init flickering

--- a/prototype/css/styles_mini.pcss
+++ b/prototype/css/styles_mini.pcss
@@ -10,7 +10,6 @@
 	width: 100%;
 	position: fixed;
 	left: 0;
-	top: -148px;
 	cursor: pointer;
 	text-align: center;
 	box-sizing: border-box;
@@ -41,6 +40,7 @@
 		flex-wrap: wrap;
 	}
 	&-headline {
+		cursor: default;
 		width: 85%;
 		flex: 1 1 85%;
 		& > div {
